syntax = "proto3";

package translator;

option go_package = "ancient-script-decoder/proto";

// TranslatorService defines the gRPC service for ancient script translation
service TranslatorService {
  // TranslateManuscript translates an ancient manuscript image to modern text
  rpc TranslateManuscript(TranslateRequest) returns (TranslateResponse) {}
  
  // SummarizeText generates a summary for translated text
  rpc SummarizeText(SummarizeRequest) returns (SummarizeResponse) {}
}

// TranslateRequest contains the manuscript image and script type
message TranslateRequest {
  bytes manuscript_image = 1;
  string script_type = 2;
}

// TranslateResponse contains the translation, summary and historical metadata
message TranslateResponse {
  string original_script = 1;
  string translated_text = 2;
  string summary = 3;
  MetadataResponse metadata = 4;
}

// MetadataResponse contains historical context information
message MetadataResponse {
  string script_type = 1;
  repeated TimePeriod time_periods = 2;
  repeated Region regions = 3;
  repeated string cultural_context = 4;
  repeated string material_context = 5;
  repeated HistoricalEvent historical_events = 6;
  double confidence_score = 7;
  string detected_date = 8;
}

// TimePeriod represents a historical time period
message TimePeriod {
  string name = 1;
  int32 start_year = 2;
  int32 end_year = 3;
  string description = 4;
}

// Region represents a geographical region
message Region {
  string name = 1;
  repeated string modern_areas = 2;
  string description = 3;
}

// HistoricalEvent represents an event referenced in the manuscript
message HistoricalEvent {
  string name = 1;
  string event_type = 2;
  int32 year = 3;
  string description = 4;
}

// SummarizeRequest contains the text to summarize
message SummarizeRequest {
  string text = 1;
}

// SummarizeResponse contains the generated summary
message SummarizeResponse {
  string summary = 1;
  int32 text_length = 2;
}
